# ef

./: .buildinfo  .gitignore  CHANGELOG.md  IMPLEMENTATION_SUMMARY.md  README.md  demo.py  examples.py  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  pytest.ini  search.html  searchindex.js  setup.cfg  table_of_contents.html
.claude/: CLAUDE.md
.claude/skills/: ef-architecture
.claude/skills/ef-architecture/: SKILL.md
.github/workflows/: ci.yml
_modules/: index.html
_modules/ef/: artifact_graph.html  base.html  config.html  corpus.html  dag.html  diagnostics.html  embedder_adapters.html  embedder_wrappers.html  embedders.html  evaluation.html  exploration.html  explore.html  hashing.html  ops.html  projects.html  refresh.html  reranking.html  segmenter_adapters.html  segmenters.html  segments.html  service.html  source_manager.html  storage.html
_modules/ef/plugins/: imbed_plugin.html  simple_plugin.html
_sources/: index.rst.txt  table_of_contents.rst.txt
_sources/module_docs/: ef.rst.txt
_sources/module_docs/ef/: artifact_graph.rst.txt  base.rst.txt  config.rst.txt  corpus.rst.txt  dag.rst.txt  diagnostics.rst.txt  embedder_adapters.rst.txt  embedder_wrappers.rst.txt  embedders.rst.txt  evaluation.rst.txt  exploration.rst.txt  explore.rst.txt  hashing.rst.txt  ops.rst.txt  plugins.rst.txt  projects.rst.txt  refresh.rst.txt  reranking.rst.txt  segmenter_adapters.rst.txt  segmenters.rst.txt  segments.rst.txt  service.rst.txt  source_manager.rst.txt  storage.rst.txt  tests.rst.txt
_sources/module_docs/ef/plugins/: imbed_plugin.rst.txt  simple_plugin.rst.txt
_sources/module_docs/ef/tests/: test_basic.rst.txt
docs/: ADVANCED_FEATURES_SUMMARY.md  ADVANCED_SEGMENTATION.md  SEGMENTER_REGISTRATION.md
ef/: __init__.py  artifact_graph.py  base.py  config.py  corpus.py  dag.py  diagnostics.py  embedder_adapters.py  embedder_wrappers.py  embedders.py  evaluation.py  exploration.py  explore.py  hashing.py  ops.py  projects.py  refresh.py  reranking.py  segmenter_adapters.py  segmenters.py  segments.py  service.py  source_manager.py  storage.py
ef/plugins/: README.md  __init__.py  ab_testing.py  adaptive_segmentation.py  advanced_segmenters.py  cli_tools.py  domain_segmenters.py  embedding_optimized.py  imbed_plugin.py  jupyter_widgets.py  marketplace.py  multilingual_segmenters.py  profiler.py  segmenter_composition.py  segmenter_config.py  segmenter_quality.py  segmenter_registry.py  segmenter_streaming.py  segmenter_utils.py  segmenter_viz.py  simple_plugin.py  vector_db_integration.py
ef/tests/: __init__.py  test_basic.py
imbed_refactored/: IMBED_REFACTORING_GUIDE.md  README.md  advanced_example.py  imbed_refactored.py  persistence_examples.py
misc/: ef_demo.ipynb  ef_scrap.ipynb
misc/docs/: 11 -- Client-Side AI Vector Search.md  ef_design_notes.md  ef_use_cases.md
module_docs/: ef.html
module_docs/ef/: artifact_graph.html  base.html  config.html  corpus.html  dag.html  diagnostics.html  embedder_adapters.html  embedder_wrappers.html  embedders.html  evaluation.html  exploration.html  explore.html  hashing.html  ops.html  plugins.html  projects.html  refresh.html  reranking.html  segmenter_adapters.html  segmenters.html  segments.html  service.html  source_manager.html  storage.html  tests.html
module_docs/ef/plugins/: imbed_plugin.html  simple_plugin.html
module_docs/ef/tests/: test_basic.html
tests/: test_advanced_features.py  test_advanced_segmenters.py  test_artifact_graph.py  test_config.py  test_corpus.py  test_diagnostics.py  test_embedders.py  test_evaluation.py  test_exploration.py  test_explore.py  test_hashing_embedder.py  test_refresh.py  test_reranking.py  test_segmenter_registry.py  test_segmenters.py  test_service.py  test_smoke.py  test_source_manager.py
