[build-system]
requires = [
    "hatchling",
]
build-backend = "hatchling.build"

[project]
name = "ef"
version = "0.1.14"
description = "Embeddings Flow -- Tools for workflows involving semantic embeddings"
readme = "README.md"
requires-python = ">=3.10"
keywords = []
authors = [
    { name = "Thor Whalen" },
]
dependencies = [
    "numpy",
    "dol>=0.3.31",
    "i2>=0.1.63",
    "vd>=0.2.0",
]

[project.license]
text = "MIT"

[project.urls]
Homepage = "https://github.com/thorwhalen/ef"

[project.optional-dependencies]
imbed = [
    "imbed>=0.0.23",
]
explore = [
    "umap-learn>=0.5",
    "hdbscan>=0.8.33",
]
openai = [
    "openai>=1.0",
]
sentence-transformers = [
    "sentence-transformers>=2.2",
]
testing = [
    "pytest",
]

[tool.ruff]
line-length = 88
target-version = "py310"
exclude = [
    "**/*.ipynb",
    ".git",
    ".venv",
    "build",
    "dist",
    "tests",
    "examples",
    "scrap",
]

[tool.ruff.lint]
select = [
    "D100",
]
ignore = [
    "D203",
    "E501",
    "B905",
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.per-file-ignores]
"**/tests/*" = [
    "D",
]
"**/examples/*" = [
    "D",
]
"**/scrap/*" = [
    "D",
]

[tool.pytest.ini_options]
minversion = "6.0"
testpaths = [
    "tests",
]
doctest_optionflags = [
    "NORMALIZE_WHITESPACE",
    "ELLIPSIS",
]

[tool.wads.ci]
project_name = ""

[tool.wads.ci.commands]
pre_test = []
test = []
post_test = []
lint = []
format = []

[tool.wads.ci.env]
required_envvars = []
test_envvars = []
extra_envvars = []

[tool.wads.ci.env.defaults]

[tool.wads.ci.quality.ruff]
enabled = true

[tool.wads.ci.quality.black]
enabled = false

[tool.wads.ci.quality.mypy]
enabled = false

[tool.wads.ci.testing]
python_versions = [
    "3.10",
    "3.12",
]
pytest_args = [
    "-v",
    "--tb=short",
]
coverage_enabled = true
coverage_threshold = 0
coverage_report_format = [
    "term",
    "xml",
]
exclude_paths = [
    "examples",
    "scrap",
]
test_on_windows = true

[tool.wads.ci.metrics]
enabled = true
config_path = ".github/umpyre-config.yml"
storage_branch = "code-metrics"
python_version = "3.10"
force_run = false

[tool.wads.ci.build]
sdist = true
wheel = true

[tool.wads.ci.publish]
enabled = true

[tool.wads.ci.docs]
enabled = true
builder = "epythet"
ignore_paths = [
    "tests/",
    "scrap/",
    "examples/",
]
