[metadata]
name = ef
version = 0.1.1
url = https://github.com/thorwhalen/ef
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = Embeddings Flow -- Tools for workflows involving semantic embeddings
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = ef

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	numpy

[options.extras_require]
full = 
	dol>=0.2.38
	meshed>=0.1.20
	larder>=0.1.6
imbed = 
	imbed>=0.1
	dol>=0.2.38
	meshed>=0.1.20
	larder>=0.1.6
testing =
	pytest>=7.0.0
	pytest-cov

