[metadata]
name = ef
version = 0.1.1
url = https://github.com/thorwhalen/ef
platforms = any
description_file = README.md
root_url = https://github.com/thorwhalen/
license = mit
author = Thor Whalen
description = Embeddings Flow -- Tools for workflows involving semantic embeddings
long_description = file:README.md
long_description_content_type = text/markdown
keywords = 
display_name = ef

[options]
packages = find:
include_package_data = True
zip_safe = False
install_requires = 
	numpy

[options.extras_require]
full = 
	dol>=0.3.31
	meshed>=0.1.165
	larder>=0.0.3
imbed = 
	imbed>=0.0.23
	dol>=0.3.31
	meshed>=0.1.165
	larder>=0.0.3
testing = 
	pytest

